--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "compute-cosine-similarity": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "faker": "5.3.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "ml-kmeans": "^6.0.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "nodemailer": "^6.9.13",
-    "react-toastify": "^10.0.5"
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
